[metadata]
name = cinder_rxt
summary = OpenStack Cinder LVM plugin to control TGT exports with unique scsi_id and scsi_sn
description_file = README.md
long_description_content_type = text/markdown
author = Chris
author_email = kevin.carter@rackspace.com
home_page = https://github.com/rackerlabs/cinder-rxt
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[files]
packages =
    cinder_rxt

[compile_catalog]
directory = cinder/locale
domain = cinder

[entry_points]
cinder.volume.drivers =
    rxt = cinder_rxt.rackspace:RXTLVM
